# HangmanGame

./: hangingFIG.py  hangman_art.py  journey.md  main.py  pyproject.toml  readme.md  word_list.py
